--- a/build.yaml
+++ b/build.yaml
@@ -20,6 +20,6 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: corne_left
+    shield: silly_left
   - board: nice_nano_v2
-    shield: corne_right
+    shield: silly_right
