--- a/boards/shields/silly/silly.dtsi
+++ b/boards/shields/silly/silly.dtsi
@@ -2,26 +2,27 @@
 
 / {
     chosen {
-        zmk,kscan = &kscan0;
+        zmk,kscan = &kscan_composite;
         zmk,matrix_transform = &default_transform;
     };
 
     default_transform: keymap_transform_0 {
         compatible = "zmk,matrix-transform";
-        columns = <18>;  // 9 columns per side
+        columns = <12>;  // 6 columns per side for main keys
         rows = <3>;      // 3 rows per side
         
         map = <
-            RC(0,0) RC(0,1) RC(0,2) RC(0,3) RC(0,4) RC(0,5)     RC(0,9) RC(0,10) RC(0,11) RC(0,12) RC(0,13) RC(0,14)
-            RC(1,0) RC(1,1) RC(1,2) RC(1,3) RC(1,4) RC(1,5)     RC(1,9) RC(1,10) RC(1,11) RC(1,12) RC(1,13) RC(1,14)
-            RC(2,0) RC(2,1) RC(2,2) RC(2,3) RC(2,4) RC(2,5)     RC(2,9) RC(2,10) RC(2,11) RC(2,12) RC(2,13) RC(2,14)
-                            RC(2,6) RC(2,7) RC(2,8)             RC(2,15) RC(2,16) RC(2,17)
+            RC(0,0) RC(0,1) RC(0,2) RC(0,3) RC(0,4) RC(0,5)     RC(0,6) RC(0,7) RC(0,8) RC(0,9) RC(0,10) RC(0,11)
+            RC(1,0) RC(1,1) RC(1,2) RC(1,3) RC(1,4) RC(1,5)     RC(1,6) RC(1,7) RC(1,8) RC(1,9) RC(1,10) RC(1,11)
+            RC(2,0) RC(2,1) RC(2,2) RC(2,3) RC(2,4) RC(2,5)     RC(2,6) RC(2,7) RC(2,8) RC(2,9) RC(2,10) RC(2,11)
+                            RC(3,0) RC(3,1) RC(3,2)             RC(3,3) RC(3,4) RC(3,5)
         >;
     };
 
-    kscan0: kscan {
+    // Main key matrix (3x6 per side)
+    kscan_matrix: kscan_matrix {
         compatible = "zmk,kscan-gpio-matrix";
-        label = "KSCAN";
+        label = "KSCAN_MATRIX";
 
         diode-direction = "col2row";
         
@@ -38,9 +39,29 @@
             , <&pro_micro 4 GPIO_ACTIVE_HIGH>   // col4 - P0.22
             , <&pro_micro 3 GPIO_ACTIVE_HIGH>   // col5 - P0.20
             , <&pro_micro 2 GPIO_ACTIVE_HIGH>   // col6 - P0.17
-            , <&pro_micro 14 GPIO_ACTIVE_HIGH>  // thumb1 - P1.11
-            , <&pro_micro 16 GPIO_ACTIVE_HIGH>  // thumb2 - P0.10
-            , <&pro_micro 10 GPIO_ACTIVE_HIGH>  // thumb3 - P0.09
             ;
+    };
+
+    // Direct GPIO thumb keys
+    kscan_direct: kscan_direct {
+        compatible = "zmk,kscan-gpio-direct";
+        label = "KSCAN_DIRECT";
+        
+        input-gpios
+            = <&pro_micro 14 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>  // thumb1 - P1.11
+            , <&pro_micro 16 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>  // thumb2 - P0.10
+            , <&pro_micro 10 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>  // thumb3 - P0.09
+            ;
+    };
+
+    // Composite kscan to combine matrix and direct keys
+    kscan_composite: kscan_composite {
+        compatible = "zmk,kscan-composite";
+        label = "KSCAN_COMPOSITE";
+        rows = <4>;
+        columns = <12>;
+        
+        // Matrix keys first, then direct keys
+        kscan = <&kscan_matrix>, <&kscan_direct>;
     };
 };
