fix caps word toggle

--- a/config/silly.conf
+++ b/config/silly.conf
@@ -4,4 +4,9 @@
 
 # Uncomment the following line to enable the Corne OLED Display
 # CONFIG_ZMK_DISPLAY=y
-CONFIG_ZMK_KEYBOARD_NAME = "silly"
+
+# Enable ZMK Studio support
+CONFIG_ZMK_STUDIO=y
+
+# Enable USB logging (helpful for studio)
+CONFIG_ZMK_USB_LOGGING=y
