--- a/boards/shields/silly/silly.dtsi
+++ b/boards/shields/silly/silly.dtsi
@@ -1,15 +1,17 @@
 #include <dt-bindings/zmk/matrix_transform.h>
+#include <physical_layouts.dtsi>
 
 / {
     chosen {
         zmk,kscan = &kscan_composite;
         zmk,matrix_transform = &default_transform;
+        zmk,physical-layout = &physical_layout;
     };
 
     default_transform: keymap_transform_0 {
         compatible = "zmk,matrix-transform";
-        columns = <12>;  // 6 columns per side for main keys + 3 per side for thumbs
-        rows = <4>;      // 3 rows for main keys + 1 row for thumbs
+        columns = <12>;  // 6 columns per side
+        rows = <4>;      // 3 matrix rows + 1 thumb row
         
         map = <
             RC(0,0) RC(0,1) RC(0,2) RC(0,3) RC(0,4) RC(0,5)     RC(0,6) RC(0,7) RC(0,8) RC(0,9) RC(0,10) RC(0,11)
@@ -67,5 +69,56 @@
             kscan = <&kscan_direct>;
             row-offset = <3>;
         };
+    };
+
+    physical_layout: physical_layout {
+        compatible = "zmk,physical-layout";
+        display-name = "Silly Split";
+        
+        keys
+            //                     w   h    x    y     rot   rx   ry
+            = <&key_physical_attrs 100 100   0    0     0     0    0>   // Tab
+            , <&key_physical_attrs 100 100 100    0     0     0    0>   // B  
+            , <&key_physical_attrs 100 100 200    0     0     0    0>   // L
+            , <&key_physical_attrs 100 100 300    0     0     0    0>   // D
+            , <&key_physical_attrs 100 100 400    0     0     0    0>   // W
+            , <&key_physical_attrs 100 100 500    0     0     0    0>   // Z
+            , <&key_physical_attrs 100 100 600    0     0     0    0>   // '
+            , <&key_physical_attrs 100 100 700    0     0     0    0>   // F
+            , <&key_physical_attrs 100 100 800    0     0     0    0>   // O
+            , <&key_physical_attrs 100 100 900    0     0     0    0>   // U
+            , <&key_physical_attrs 100 100 1000   0     0     0    0>   // J
+            , <&key_physical_attrs 100 100 1100   0     0     0    0>   // Bspc
+            , <&key_physical_attrs 100 100   0  100     0     0    0>   // Ctrl
+            , <&key_physical_attrs 100 100 100  100     0     0    0>   // N
+            , <&key_physical_attrs 100 100 200  100     0     0    0>   // R
+            , <&key_physical_attrs 100 100 300  100     0     0    0>   // T
+            , <&key_physical_attrs 100 100 400  100     0     0    0>   // S
+            , <&key_physical_attrs 100 100 500  100     0     0    0>   // G
+            , <&key_physical_attrs 100 100 600  100     0     0    0>   // Y
+            , <&key_physical_attrs 100 100 700  100     0     0    0>   // H
+            , <&key_physical_attrs 100 100 800  100     0     0    0>   // A
+            , <&key_physical_attrs 100 100 900  100     0     0    0>   // E
+            , <&key_physical_attrs 100 100 1000 100     0     0    0>   // I
+            , <&key_physical_attrs 100 100 1100 100     0     0    0>   // ,
+            , <&key_physical_attrs 100 100   0  200     0     0    0>   // Shift
+            , <&key_physical_attrs 100 100 100  200     0     0    0>   // Q
+            , <&key_physical_attrs 100 100 200  200     0     0    0>   // X
+            , <&key_physical_attrs 100 100 300  200     0     0    0>   // M
+            , <&key_physical_attrs 100 100 400  200     0     0    0>   // C
+            , <&key_physical_attrs 100 100 500  200     0     0    0>   // V
+            , <&key_physical_attrs 100 100 600  200     0     0    0>   // K
+            , <&key_physical_attrs 100 100 700  200     0     0    0>   // P
+            , <&key_physical_attrs 100 100 800  200     0     0    0>   // .
+            , <&key_physical_attrs 100 100 900  200     0     0    0>   // ;
+            , <&key_physical_attrs 100 100 1000 200     0     0    0>   // /
+            , <&key_physical_attrs 100 100 1100 200     0     0    0>   // Enter
+            , <&key_physical_attrs 100 100 300  300     0     0    0>   // GUI (left thumb)
+            , <&key_physical_attrs 100 100 400  300     0     0    0>   // Mo2 (left thumb)
+            , <&key_physical_attrs 100 100 500  300     0     0    0>   // Alt/Esc (left thumb)
+            , <&key_physical_attrs 100 100 600  300     0     0    0>   // Space (right thumb)
+            , <&key_physical_attrs 100 100 700  300     0     0    0>   // Mo3 (right thumb)
+            , <&key_physical_attrs 100 100 800  300     0     0    0>   // Del (right thumb)
+            ;
     };
 };
