--- a/boards/shields/silly/silly.dtsi
+++ b/boards/shields/silly/silly.dtsi
@@ -58,4 +58,57 @@
             row-offset = <3>;
         };
     };
+
+    // BOTH sides need physical layout definition for Studio
+    physical_layout: physical_layout {
+        compatible = "zmk,physical-layout";
+        display-name = "Silly Split";
+        transform = <&default_transform>;
+        kscan = <&kscan_composite>;
+        
+        keys
+            = <&key_physical_attrs 100 100   0    0     0     0    0>
+            , <&key_physical_attrs 100 100 100    0     0     0    0>
+            , <&key_physical_attrs 100 100 200    0     0     0    0>
+            , <&key_physical_attrs 100 100 300    0     0     0    0>
+            , <&key_physical_attrs 100 100 400    0     0     0    0>
+            , <&key_physical_attrs 100 100 500    0     0     0    0>
+            , <&key_physical_attrs 100 100 700    0     0     0    0>
+            , <&key_physical_attrs 100 100 800    0     0     0    0>
+            , <&key_physical_attrs 100 100 900    0     0     0    0>
+            , <&key_physical_attrs 100 100 1000   0     0     0    0>
+            , <&key_physical_attrs 100 100 1100   0     0     0    0>
+            , <&key_physical_attrs 100 100 1200   0     0     0    0>
+            , <&key_physical_attrs 100 100   0  100     0     0    0>
+            , <&key_physical_attrs 100 100 100  100     0     0    0>
+            , <&key_physical_attrs 100 100 200  100     0     0    0>
+            , <&key_physical_attrs 100 100 300  100     0     0    0>
+            , <&key_physical_attrs 100 100 400  100     0     0    0>
+            , <&key_physical_attrs 100 100 500  100     0     0    0>
+            , <&key_physical_attrs 100 100 700  100     0     0    0>
+            , <&key_physical_attrs 100 100 800  100     0     0    0>
+            , <&key_physical_attrs 100 100 900  100     0     0    0>
+            , <&key_physical_attrs 100 100 1000 100     0     0    0>
+            , <&key_physical_attrs 100 100 1100 100     0     0    0>
+            , <&key_physical_attrs 100 100 1200 100     0     0    0>
+            , <&key_physical_attrs 100 100   0  200     0     0    0>
+            , <&key_physical_attrs 100 100 100  200     0     0    0>
+            , <&key_physical_attrs 100 100 200  200     0     0    0>
+            , <&key_physical_attrs 100 100 300  200     0     0    0>
+            , <&key_physical_attrs 100 100 400  200     0     0    0>
+            , <&key_physical_attrs 100 100 500  200     0     0    0>
+            , <&key_physical_attrs 100 100 700  200     0     0    0>
+            , <&key_physical_attrs 100 100 800  200     0     0    0>
+            , <&key_physical_attrs 100 100 900  200     0     0    0>
+            , <&key_physical_attrs 100 100 1000 200     0     0    0>
+            , <&key_physical_attrs 100 100 1100 200     0     0    0>
+            , <&key_physical_attrs 100 100 1200 200     0     0    0>
+            , <&key_physical_attrs 100 100 250  300     0     0    0>
+            , <&key_physical_attrs 100 100 350  300     0     0    0>
+            , <&key_physical_attrs 100 100 450  300     0     0    0>
+            , <&key_physical_attrs 100 100 750  300     0     0    0>
+            , <&key_physical_attrs 100 100 850  300     0     0    0>
+            , <&key_physical_attrs 100 100 950  300     0     0    0>
+            ;
+    };
 };
