--- a/build.yaml
+++ b/build.yaml
@@ -21,7 +21,18 @@
 include:
   - board: nice_nano_v2
     shield: silly_left
-    snippet: studio-rpc-usb-uart # Enable Studio on left side
-    cmake-args: -DCONFIG_ZMK_STUDIO=y
+    cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
   - board: nice_nano_v2
     shield: silly_right
+    cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
+
+  - board: xiao_nrf54l15
+    shield: silly_dongle
+    snippet: studio-rpc-usb-uart
+    cmake-args: -DCONFIG_ZMK_STUDIO=y
+
+  # Settings reset for all boards
+  - board: nice_nano_v2
+    shield: settings_reset
+  - board: xiao_nrf54l15
+    shield: settings_reset
